--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.4.15",
     "@astrojs/check": "^0.5.6",
+    "@picocss/pico": "^2.0.6",
+    "astro": "^4.4.15",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "sass": "^1.71.1"
   }
 }
