--- a/package.json
+++ b/package.json
@@ -1,26 +1,14 @@
 {
-  "name": "mondracode-personal-website",
-  "version": "1.0.0",
-  "private": true,
-  "description": "mondracode-personal-website",
-  "author": "Santiago Mondragón Gómez",
-  "keywords": [
-    "gatsby"
-  ],
+  "name": "cv",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public -b release"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "gatsby": "^5.9.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "astro": "^5.0.5"
   }
 }
