chore: Install picoCSS and SASS

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.5"
+    "@picocss/pico": "^2.0.6",
+    "astro": "^5.0.5",
+    "sass": "^1.83.0"
   }
 }
