--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@picocss/pico": "^2.0.6",
-    "astro": "^5.0.5",
-    "sass": "^1.83.0"
+    "astro": "^5.0.5"
   }
 }
